# rest-your-eyes

./: LICENSE  README.md  TODO.md  build.sh  index.html  main.py  privacy.html  pyproject.toml  requirements.txt  setup.py
src/: main.py
