[tool.briefcase]
project_name = "RestYourEyes"
bundle = "com.yourcompany.restyoureyes"
version = "0.1.0"
description = "A simple macOS menu bar app that reminds you to rest your eyes."
author = "Your Name"
author_email = "your@email.com"
url = "https://yourwebsite.com"
license = "MIT"

[tool.briefcase.app.restyoureyes]
formal_name = "Rest Your Eyes"
description = "A menu bar app to remind you to rest your eyes."
sources = ["src/main"]
requires = [
    "pyobjc",
]
# icon = "icons/restyoureyes"  # optional if you have an icon
# app_target = "macOS"  # briefcase knows based on platform

[build-system]
requires = ["briefcase"]
build-backend = "briefcase.build_system"